@@ -3,6 +3,7 @@
 	* Made a workaround for pre-4.2 bug where TYPO3 does not correctly handle flexform sheet references (see http://bugs.typo3.org/view.php?id=6581)
 	* Removed required attribute for "Close commnting after:" in Advanced tab
 	* Use current page if no storage page set
+	* Changed prefix in forms and styles from nccomments to comments
 
 2007-10-24 Dmitry Dulepov  <dmitry@typo3.org>
 
